--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  background-image: url("background.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 header, nav, main, footer {
@@ -10,28 +13,35 @@ header, nav, main, footer {
 }
 
 header {
-  background-color: #333;
+  background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
+  text-align: center;
 }
 
 nav {
-  background-color: #f0f0f0;
+  background-color: rgba(255, 255, 255, 0.8);
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1;
 }
 
 nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
 }
 
 nav li {
-  display: inline;
-  margin-right: 10px;
+  margin: 0 10px;
 }
 
 nav a {
   text-decoration: none;
   color: #333;
+  font-weight: bold;
 }
 
 nav a:hover {
@@ -39,11 +49,21 @@ nav a:hover {
 }
 
 section {
-  margin-bottom: 20px;
+  margin-bottom: 100px;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
+h2 {
+  margin-top: 0;
 }
 
 footer {
-  background-color: #333;
+  background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
   text-align: center;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 }
+
