--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ nav, main, footer {
 }
 
 nav {
+  color: #fff;
   position: fixed;
   width: 100%;
   top: 0;
@@ -20,6 +21,7 @@ nav {
 }
 
 nav ul {
+  color: #fff;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -33,7 +35,7 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: #333;
+  color: #fff;
   font-weight: bold;
 }
 
@@ -41,6 +43,7 @@ nav a:hover {
 }
 
 main {
+  color: #fff;
   padding: 100px 20px 20px; /* Adjusted */
   margin-top: 60px; /* Added */
 }
@@ -55,6 +58,7 @@ h2 {
 }
 
 footer {
+  color: #fff;
   text-align: center;
   position: fixed;
   width: 100%;
