--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ nav, main, footer {
 }
 
 nav {
+  background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
   position: fixed;
   width: 100%;
@@ -21,6 +22,7 @@ nav {
 }
 
 nav ul {
+  background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
   list-style-type: none;
   margin: 0;
@@ -34,6 +36,7 @@ nav li {
 }
 
 nav a {
+  background-color: rgba(0, 0, 0, 0.8);
   text-decoration: none;
   color: #fff;
   font-weight: bold;
@@ -43,6 +46,7 @@ nav a:hover {
 }
 
 main {
+  background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
   padding: 100px 20px 20px; /* Adjusted */
   margin-top: 60px; /* Added */
@@ -58,6 +62,7 @@ h2 {
 }
 
 footer {
+  background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
   text-align: center;
   position: fixed;
